tests/snapshots/serde__display_uint8array_zeroed2.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint8Array([0, 0, 0])"
---
new Uint8Array(3)
