tests/snapshots/serde__display_uint8clampedarray_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint8ClampedArray()"
---
new Uint8ClampedArray()
