tests/snapshots/serde__display_uint8clampedarray_many_bytes.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint8ClampedArray([0, 1, 2, 3, 4, 5, 6, 7, 8])"
---
new Uint8ClampedArray([
  0x00, 0x01, 0x02, 0x03, 0x04, 0x05, 0x06, 0x07,
  0x08,
])
