tests/snapshots/serde__display_uint8clampedarray_one_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint8ClampedArray([1])"
---
new Uint8ClampedArray([
  0x01,
])
