tests/snapshots/serde__display_uint8clampedarray_resizable.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint8ClampedArray(new ArrayBuffer(2, { maxByteLength: 10 }))"
---
const v0 = new ArrayBuffer(2, { maxByteLength: 10 });
new Uint8ClampedArray(v0)
