tests/snapshots/serde__display_uint8clampedarray_resizable_non_tracking.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint8ClampedArray(new ArrayBuffer(2, { maxByteLength: 10 })).subarray(0, 1)"
---
const v0 = new ArrayBuffer(2, { maxByteLength: 10 });
new Uint8ClampedArray(v0, 0, 1)
