tests/snapshots/serde__display_uint8clampedarray_two_bytes.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint8ClampedArray([1, 2])"
---
new Uint8ClampedArray([
  0x01, 0x02,
])
