tests/snapshots/serde__display_uint8clampedarray_zeroed.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint8ClampedArray(8)"
---
new Uint8ClampedArray(8)
