tests/snapshots/serde__display_uint8clampedarray_zeroed2.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint8ClampedArray([0, 0, 0])"
---
new Uint8ClampedArray(3)
